docs(module-ui): update readme with features and functionality feat(module-ui): add bootstrap and fix javascript

--- a/createReservationOwner.html
+++ b/createReservationOwner.html
@@ -11,10 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script> src="http://code.jquery.com/jquery-2.1.4.min.js" </script>
-    <script src="http://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
-    <script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
+
 
 
 </head>
@@ -117,7 +114,7 @@
 
 
         <!--<button type="button" id="edit" class="btn btn-warning" data-toggle="tooltip" data-placement="right" title="Tooltip on right" data-content="Click to edit an existing reservation">Edit</button>-->
-        <a href="editReservation.html" class="btn btn-warning ">Confirm</a>
+        <a href="ownerRequirements.html" class="btn btn-warning ">Confirm</a>
 
     </div>
     <hr>
@@ -125,6 +122,9 @@
 </form>
 
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script> src="http://code.jquery.com/jquery-2.1.4.min.js" </script>
+<script src="http://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
+<script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
 </body>
 </html>
