--- a/Owner/seating.html
+++ b/Owner/seating.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"  crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 <body class="seating">
@@ -25,7 +25,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a href="index.html" class="navbar-brand">BookMyTable</a>
+            <a href="../Restaurant/index.html" class="navbar-brand">BookMyTable</a>
         </div><!-- Navbar Header-->
         <div class="collapse navbar-collapse" id="navbar-collapse">
 
@@ -34,8 +34,8 @@
 
 
             <ul class="nav navbar-nav">
-                <li><a href=ownerRequirements.html>Home</a>
-                <li><a href="settings.html">Settings</a>
+                <li><a href=ownerHome.html>Home</a>
+                <li><a href="../Restaurant/settings.html">Settings</a>
             </ul>
         </div>
     </div><!-- End Container-->
@@ -69,7 +69,7 @@
 
 <div class=" text-center">
 
-    <a href="ownerRequirements.html" class="btn btn-success ">CONFIRM</a>
+    <a href="ownerHome.html" class="btn btn-success ">CONFIRM</a>
 
 </div>
 
