--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
     <meta charset="UTF-8">
 
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"  crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"  crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
 
 
@@ -32,12 +32,19 @@
         </div><!-- Navbar Header-->
         <div class="collapse navbar-collapse" id="navbar-collapse">
 
-            <a href="owner.html" class="btn btn-warning navbar-btn navbar-right">Owner login</a>
+
+            <a href="editReservation.html" class="btn btn-warning navbar-btn navbar-right">Edit or Cancel Reservstion</a>
             <ul class="nav navbar-nav">
-                <li><a href="#registration">Book</a>
+
+
                 <li><a href="#gallery">Gallery</a>
                 <li><a href="#contact">ContactUs</a>
+
+
             </ul>
+
+
+
         </div>
     </div><!-- End Container-->
 </nav><!-- End navbar -->
@@ -175,7 +182,7 @@
 
 
                <!--<button type="button" id="edit" class="btn btn-warning" data-toggle="tooltip" data-placement="right" title="Tooltip on right" data-content="Click to edit an existing reservation">Edit</button>-->
-            <a href="editReservation.html" class="btn btn-warning ">Edit/Cancel</a>
+
         </div>
 <hr>
 
@@ -193,7 +200,7 @@
                     </div>
                     <div class="panel-body">
 
-                        <form class="form-horizontal">
+                        <form class="form-horizontal " action="../Owner/ownerHome.html">
                             <div class="form-group">
                                 <label for="name" class="col-sm-2 control-label">Email</label>
                                 <div class="col-sm-10">
@@ -226,7 +233,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-offset-2 col-sm-10">
-                                    <button type="submit" class="btn btn-primary">Sign in</button>
+                                    <button type="submit"  class="btn btn-primary">Sign in</button>
 
                                     <a href="index.html" class="btn btn-info" role="button">Home</a>
                                 </div>
@@ -270,28 +277,28 @@
             </ol>
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="images/highway.jpg" alt="Text of the image">
+                    <img src="../images/highway.jpg" alt="Text of the image">
                     <div class="carousel-caption">
                         <h3>Highway heading</h3>
                         <p>This is the caption</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="images/river.jpg" alt="Text of the image">
+                    <img src="../images/river.jpg" alt="Text of the image">
                     <div class="carousel-caption">
                         <h3>River heading</h3>
                         <p>This is the caption</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="images/street.jpg" alt="Text of the image">
+                    <img src="../images/street.jpg" alt="Text of the image">
                     <div class="carousel-caption">
                         <h3>Street heading</h3>
                         <p>This is the caption</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="images/painting.jpg" alt="Text of the image">
+                    <img src="../images/painting.jpg" alt="Text of the image">
                     <div class="carousel-caption">
                         <h3>Painting heading</h3>
                         <p>This is the caption</p>
@@ -348,12 +355,20 @@
 
 
 
+
+<script src="https://code.angularjs.org/1.4.8/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script> src="http://code.jquery.com/jquery-2.1.4.min.js" </script>
-<script src="http://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
-<script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
 
-<script type="text/javascript" src="script.js"></script>
+
+<script src="../app.js"></script>
+<script> src="http://code.jquery.com/jquery-2.1.4.min.js" </script>
+<script src="https://code.angularjs.org/1.4.8/angular-messages.js"></script>
+<script>src='public/lib/angular-bootstrap/ui-bootstrap.min.js' </script>
+
+<script src="https://code.angularjs.org/1.4.8/angular-route.js"></script>
+
+<script type="text/javascript" src="../script.js"></script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </body>
